# RustTracer

./: .gitignore  Cargo.toml
src/: aabb.rs  bvh.rs  bvh_bucket.rs  glsl_bvh.rs  main.rs  material.rs  mesh.rs  model.rs  presenter.rs  trace_ppl.rs  world.rs
src/shaders/: interface.glsl  pbr.glsl  pbr_utils.glsl  trace.glsl  trace.wgsl  types.glsl  utils.glsl
