[package]
name = "bvh01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "*"
time-test = "*"
winit = "0.26"
screen-13 = {git = "https://github.com/DoeringChristian/screen-13", branch = "master"}
screen-13-fx = {git = "https://github.com/attackgoat/screen-13.git"}
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator.git", branch = "ash-0.37" } # https://github.com/Traverse-Research/gpu-allocator/pull/104
#raw-window-handle = "0.4"
bytemuck = {version = "1.9", features = ["derive"]}
inline-spirv = "0.1"
pretty_env_logger = "0.4"
archery = "0.4"
image = "*"
spirq = "0.5"
spirv-reflect = "*"
